--- a/src/main/webapp/WEB-INF/facelets/faceletsTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/facelets/faceletsTemplate.xhtml
@@ -8,7 +8,7 @@
       xmlns="http://www.w3.org/1999/xhtml">
 
 <h:head>
-    <title>Role Based Access Control</title>
+    <title>Mold</title>
 
     <meta name="viewport" content="width=device-width"/>
     <meta http-equiv="refresh" content="#{session.maxInactiveInterval};url=#{request.contextPath}/page/index.xhtml"/>
