--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -24,15 +24,15 @@
                         <h:panelGrid columns="3" cellpadding="5" style="margin: 0 auto;">
 
                             <p:outputLabel for="email" value="E-Mail"/>
-                            <p:inputText id="email" value="#{loginBacking.email}"/>
+                            <p:inputText id="email" value="#{loginBB.email}"/>
                             <p:message for="email"/>
 
                             <p:outputLabel for="password" value="Password"/>
-                            <p:inputText type="password" id="password" value="#{loginBacking.password}"/>
+                            <p:inputText type="password" id="password" value="#{loginBB.password}"/>
                             <p:message for="password"/>
 
                             <p:commandButton id="submit" update="@form" 
-                                 value="Login" action="#{loginBacking.submit}"/>
+                                 value="Login" action="#{loginBB.submit}"/>
                         </h:panelGrid>
                     </h:form>
                 </div>
