--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -1,43 +1,43 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
-<f:view>
-    <h:head>
-        <h:outputStylesheet>
-            h3 {
-                text-align: center;
-            }
-        </h:outputStylesheet>
-    </h:head>
+      xmlns:p="http://primefaces.org/ui"
+      xmlns="http://www.w3.org/1999/xhtml">
+
+
+<h:head>
+    <title>Mold Application</title>
+    <meta name="viewport" content="width=device-width"/>
+    <meta http-equiv="refresh" content="#{session.maxInactiveInterval};url=#{request.contextPath}/page/index.xhtml"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
+</h:head>
     <h:body>
-        <p:outputPanel>
-            <div class="ui-g">
-                <div class="ui-g-4"/>
-                <div class="ui-g-4">
-                    <h3>Login</h3>
+        <ui:composition template="/WEB-INF/facelets/faceletsTemplate.xhtml">
+            <ui:define name="content">
+                <h:form id="login">
+                    <p:messages id="messages" globalOnly="true"/>
 
-                    <h:form id="login">
-                        <p:messages id="messages" globalOnly="true"/>
+                    <h:panelGrid columns="3" cellpadding="5" style="margin: 0 auto;">
 
-                        <h:panelGrid columns="3" cellpadding="5" style="margin: 0 auto;">
+                        <p:outputLabel for="email" value="E-Mail"/>
+                        <p:inputText id="email" value="#{loginBB.email}"/>
+                        <p:message for="email"/>
 
-                            <p:outputLabel for="email" value="E-Mail"/>
-                            <p:inputText id="email" value="#{loginBB.email}"/>
-                            <p:message for="email"/>
+                        <p:outputLabel for="password" value="Password"/>
+                        <p:inputText type="password" id="password" value="#{loginBB.password}"/>
+                        <p:message for="password"/>
 
-                            <p:outputLabel for="password" value="Password"/>
-                            <p:inputText type="password" id="password" value="#{loginBB.password}"/>
-                            <p:message for="password"/>
-
-                            <p:commandButton id="submit" update="@form" 
-                                 value="Login" action="#{loginBB.submit}"/>
-                        </h:panelGrid>
-                    </h:form>
-                </div>
-            </div>
-        </p:outputPanel>
+                        <p:commandButton id="submit" update="@form"
+                                         value="Login" action="#{loginBB.submit}"/>
+                    </h:panelGrid>
+                </h:form>
+            </ui:define>
+        </ui:composition>
     </h:body>
-</f:view>
 </html>
