Try to get form working

--- a/src/main/webapp/WEB-INF/facelets/faceletsTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/facelets/faceletsTemplate.xhtml
@@ -24,7 +24,7 @@
 
     <div id="head" style="position: relative; top: 0; width: 100%;">
         <f:view>
-            <p:messages id="pageMessages" showDetail="true" autoUpdate="true" closable="true"/>
+            <p:messages id="pageMessages" showDetail="true" closable="true"/>
         </f:view>
     </div>
 
