--- a/src/main/webapp/WEB-INF/facelets/faceletsTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/facelets/faceletsTemplate.xhtml
@@ -35,7 +35,7 @@
                     </p:submenu>
 
                     <p:submenu label="Setup" icon="ui-icon-gear">
-                        <p:menuitem value="Add User" icon="ui-icon-person" url="/page/setup/index.xhtml"/>
+                        <p:menuitem value="Add User" icon="ui-icon-person" url="/page/setup/usr.xhtml"/>
                     </p:submenu>
 
                 </p:menubar>
